fix: add hover text (Mon, Mar 13.2023, 23.44)

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -147,7 +147,7 @@ label{
     padding: .5rem 0;
     transition: .7s;
   }
-  .icon_checked:hover{
+  .svg_icons:hover{
     transform: rotate(135deg);
     transition: .7s;
   }
@@ -165,6 +165,7 @@ label{
   visibility: hidden;
   opacity: 0;
   transition: 1s opacity;
+  cursor: pointer;
 }
 @media(max-width: 821px){
   .svg_icons{
@@ -207,6 +208,9 @@ label{
 #button1:checked ~ .item_text .text{
   color: rgb(116, 185, 249);
 }
+#button1:checked ~ .item_text .text:hover{
+  color: rgb(186, 179, 179);
+}
 #button1:checked ~ .item_text #check1{
   display: block;
 }
@@ -224,6 +228,9 @@ label{
 #button2:checked ~ .picture img{
   opacity: 1;
   visibility: visible;
+}
+#button2:checked ~ .item_text .text:hover{
+  color: rgb(186, 179, 179);
 }
 #button2:checked ~ .item_text .text{
   color: rgb(116, 185, 249);
@@ -249,6 +256,9 @@ label{
 #button3:checked ~ .item_text .text{
   color: rgb(116, 185, 249);
 }
+#button3:checked ~ .item_text .text:hover{
+  color: rgb(186, 179, 179);
+}
 #button3:checked ~ .item_text #check3{
   display: block;
 }
@@ -270,6 +280,9 @@ label{
 #button4:checked ~ .item_text .text{
   color: rgb(116, 185, 249);
 }
+#button4:checked ~ .item_text .text:hover{
+  color: rgb(186, 179, 179);
+}
 #button4:checked ~ .item_text #check4{
   display: block;
 }
@@ -290,6 +303,9 @@ label{
 }
 #button5:checked ~ .item_text .text{
   color: rgb(116, 185, 249);
+}
+#button5:checked ~ .item_text .text:hover{
+  color: rgb(186, 179, 179);
 }
 #button5:checked ~ .item_text #check5{
   display: block;
