fix: add media (hover: hover) (Thu, Mar 16.2023, 21.36)

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -121,7 +121,7 @@ label{
   display: none;
   cursor: pointer;
 }
-@media (min-width:821px) {
+@media (hover: hover) {
   .text:hover{
     color: rgb(116, 185, 249);
   }
